# XIANYUGUANJIA

./: .coveragerc  .env.example  .gitignore  AGENT_DEPLOYMENT.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE_VERIFICATION_REPORT.md  Dockerfile.python  LICENSE  MEMORY.md  QUICKSTART.md  README.md  SECURITY.md  USER_GUIDE.md  codecov.yml  coverage.xml  coverage_after.json  coverage_after_020a.json  coverage_after_025a.json  coverage_after_029a.json  coverage_after_029b.json  coverage_after_030a.json  coverage_after_030b.json  coverage_after_030b_full.json  coverage_after_030c.json  coverage_baseline.json  coverage_before.json  coverage_final2_0302.json  coverage_final_0302.json  coverage_qa_check.json  docker-compose.yml  fix_globals.py  fix_imports.py  package.json  pyinstaller.spec  pyproject.toml  pytest.ini  qa_report.txt  quick-start.bat  quick-start.sh  (+10 more)
.claude/: launch.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
client/src/: App.jsx  App.tsx
client/src/api/: accounts.js  accounts.ts  config.ts  dashboard.ts  index.js  index.ts  listing.ts  xianguanjia.js  xianguanjia.ts
client/src/components/: ApiStatusPanel.tsx  ErrorBoundary.jsx  ErrorBoundary.tsx  IntentRulesManager.tsx  Navbar.jsx  Navbar.tsx  Pagination.tsx  PrivateRoute.jsx  SetupGuide.jsx  SetupGuide.tsx  SetupWizard.tsx  UpdateBanner.tsx
client/src/contexts/: StoreCategoryContext.tsx
client/src/hooks/: useAuth.jsx  useHealthCheck.js  useHealthCheck.ts
client/src/pages/: Dashboard.jsx  Dashboard.tsx  (+9 more)
config/: config.example.yaml
config/categories/: express.yaml  freight.yaml
config/templates/: reply_templates.json
data/geo/: city_province.json
database/: schema.sql
database/migrations/: 20260304_add_order_callback_dedup.sql  20260306_wave_b1_virtual_goods_tables.sql  20260306_wave_b4_callbacks_lease_and_dims.sql  20260306_wave_b_virtual_goods.sql  20260306_wave_c_manual_takeover_events.sql  20260306_wave_c_order_events.sql  20260306_wave_d_listing_product_mappings.sql  20260306_wave_d_ops_exception_pool.sql  20260306_wave_d_ops_exception_transition_log.sql  20260306_wave_d_ops_fulfillment_eff_daily.sql  20260306_wave_d_ops_funnel_stage_daily.sql  20260306_wave_d_ops_item_daily_snapshot.sql
docs/: API.md  DEPLOYMENT.md  PROJECT_MINDMAP_CLEAR_V1.md  PROJECT_MODULE_ROADMAP_XY-MOD-004.md  PROJECT_PLAN.md  frontend-design-token-page-spec-mapping.md  frontend-onboarding-module-breakdown.md  qa-release-verdict.md
docs/qa/: minimal-e2e-gate-template.md
docs/release/: 2026-03-07-api-first-main-release.md  XY-LASTMILE-BE-20260303-1123-无需改动证明.md
docs/reviews/: xy-audit-01-cto.md  xy-audit-02-backend.md  xy-audit-03-qa.md  xy-audit-04-gate.md  xy-audit-05-sre.md  xy-mod-003-cross-validation-quality-gate.md
examples/: __init__.py
qa_evidence/: EVD-PRB-W38-B1-DATALAYER-20260306-0418.txt  EVD-PRB-W38-MYY-001.txt
scripts/: build_release.sh  bump_version.sh  com.openclaw.xianyu.plist  diagnose.py  generate_gallery.py  import_trajectories.py  install-desktop.bat  install-launchd.sh  prepare_offline.sh  record_slider_trajectory.py  release.sh  replay_external_event_id.py  restore_data.sh  slider_diagnose.py  uninstall-launchd.sh  update.bat  update.sh  verify-quickstart.sh
scripts/macos/: com.xianyu-guanjia.plist  com.xianyu-openclaw.plist  install-desktop.sh  install_service.sh  start.command
scripts/qa/: filter_cookie_recovery_logs.sh  run_cookie_regression_matrix.sh
scripts/unix/: doctor.sh
scripts/windows/: build_exe.bat  doctor.bat  install.bat  launcher.bat  prepare_offline.bat  quickstart.bat  setup_windows.bat  simple_config.bat
server/: .env.example  Dockerfile  package-lock.json  package.json
server/scripts/: run-webhook-gate-in-docker.sh
server/src/: app.js
server/tests/: config.spec.js  payment.webhook.spec.js  review.limit-race.spec.js  xianguanjia.spec.js
src/: __init__.py  cli.py  dashboard_server.py  main.py  setup_wizard.py  windows_launcher.py
src/core/: __init__.py  bitbrowser_cdp.py  browser_client.py  config.py  config_models.py  cookie_grabber.py  cookie_health.py  crypto.py  doctor.py  drissionpage_client.py  error_handler.py  goofish_im_cookie.py  logger.py  notify.py  playwright_client.py  slider_solver.py  slider_store.py  startup_checks.py  update_config.py
src/dashboard/: __init__.py  config_service.py  embedded_html.py  mimic_ops.py  module_console.py  repository.py  router.py
src/lite/: __main__.py  config.py  cookie_renewal.py  cookie_source_adapter.py  dedup.py  msgpack.py  ws_client.py
src/modules/: __init__.py
tests/: conftest.py  test_analytics_service_full.py  test_auto_publish_cov100.py  test_batch4_cookie_health_cov100.py  test_batch4_interfaces_cov100.py  test_batch4_lite_cov100.py  test_batch4_misc_cov100.py  test_batch4_orders_cov100.py  test_batch4_quote_cov100.py  test_batch4_ticketing_cov100.py  test_batch4_xgj_cov100.py  test_browser_runtime_resolution.py  test_cli_cov100.py  test_cli_module.py  test_cli_more.py  test_cli_virtual_goods_wave_c.py  test_compliance_safety_full.py  test_config.py  test_config_models.py  test_content_service_cov100.py  test_content_service_full.py  test_cookie_renewal_cov100.py  test_cookie_source_adapter_cov100.py  test_core_browser_client_full.py  test_core_crypto_full.py  test_core_drissionpage_client.py  test_core_error_handler_full.py  test_core_playwright_client_full.py  test_core_service_container_full.py  test_core_utils.py  test_dashboard_repository.py  test_dashboard_router.py  test_dashboard_routes_full.py  test_dashboard_server.py  test_dashboard_server_cov100.py  test_dashboard_services.py  test_dashboard_virtual_goods_wave_c.py  test_dedup_and_bargain.py  test_doctor.py  test_e2e_minimal_closed_loop.py  (+67 more)
tmp/: cov_dash.json  cov_sw_lite.json
tmp/qa/: cookie_renewal_evidence.json  cookie_ws_reconnect_qa2_evidence.json
(+160 files in other folders)
