[project]
name = "xianyu-guanjia"
dynamic = ["version"]
description = "闲鱼自动化运营平台 — AI 智能客服 · 自动报价 · 订单履约 · 实时监控"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "闲鱼管家项目组", email = "haoyang056@gmail.com"}
]
keywords = ["xianyu", "闲鱼", "automation", "chatbot", "ecommerce", "aliexpress"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://github.com/brianzhibo-design/XIANYUGUANJIA"
Repository = "https://github.com/brianzhibo-design/XIANYUGUANJIA"
Documentation = "https://github.com/brianzhibo-design/XIANYUGUANJIA#readme"
Changelog = "https://github.com/brianzhibo-design/XIANYUGUANJIA/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/brianzhibo-design/XIANYUGUANJIA/issues"

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod"
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "flaky: marks tests as flaky (will be retried)",
    "unit: marks tests as unit tests",
]
